Added support for ADMINS environmental variable and corrected misspelled 'faculty' model and endpoint name
