# studiesSearchApi/urls.py
@@ -2,7 +2,7 @@ from rest_framework.routers import SimpleRouter
 from studiesSearchApi import views
 
 router = SimpleRouter()
-router.register(r'faculities', views.FaculitiesViewSet)
+router.register(r'faculties', views.FacultiesViewSet)
 router.register(r'filters', views.FiltersViewSet, basename='filters-list')
 router.register(r'schools', views.SchoolsViewSet)
 router.register(r'cities', views.CitiesViewSet)
